gitea/loadbalance.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  namespace: gitea
  labels:
    app: gitea-ssh
spec:
  type: LoadBalancer
  ports:
  - name: ssh
    port: 22
    targetPort: 222
    protocol: TCP
  selector:
    app: gitea
