gitea/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitea-server-ingress
  namespace: gitea
spec:
  entryPoints:
    - websecure 
  routes:
  - match: Host(`{domain-name}`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: gitea-http
      port: 3000
  tls:
    certResolver: letsencrypt-prod 
    secretName: gitea-tls-production
